# Checkix

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.e2e.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml  specification.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_baseline_schema.py
apps/assignments/: __init__.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
apps/assignments/migrations/: 0001_initial.py  0002_assignment_user.py
apps/audit/: filters.py  models.py  serializers.py  services.py  urls.py  views.py
apps/audit/migrations/: 0001_initial.py
apps/calendar/: __init__.py  apps.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
apps/calendar/migrations/: 0001_initial.py  0002_alter_calendarevent_is_completed_and_more.py
apps/checklist_instances/: __init__.py  apps.py  broadcasts.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
apps/checklist_instances/migrations/: 0001_initial.py
apps/checklists/: consumers.py  exceptions.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
apps/checklists/migrations/: 0001_initial.py  0002_alter_checklistitem_options_checklistitem_level_and_more.py  0003_checklisttemplate_status_category.py
apps/community/: __init__.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
apps/community/migrations/: 0001_initial.py  0002_alter_communitytemplate_status.py
apps/core/: exceptions.py  filters.py  models.py  permissions.py  search_urls.py  serializers.py  utils.py  validators.py
apps/folders/: __init__.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/folders/migrations/: 0001_initial.py  0002_alter_folder_options_folder_level_folder_lft_and_more.py
apps/ldap/: __init__.py  apps.py  backends.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/ldap/migrations/: 0001_initial.py
apps/notifications/: consumers.py  filters.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/notifications/migrations/: 0001_initial.py  0002_add_created_by_to_notification_models.py
apps/run_links/: __init__.py  apps.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
apps/run_links/migrations/: 0001_initial.py
apps/stats/: __init__.py  apps.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
apps/stats/migrations/: 0001_initial.py
apps/tags/: __init__.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/tags/migrations/: 0001_initial.py
apps/todo/: __init__.py  apps.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
apps/todo/migrations/: 0001_initial.py  0002_alter_todolist_is_deleted.py
apps/users/: models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/webhooks/: apps.py  filters.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/webhooks/migrations/: 0001_initial.py
config/: asgi.py  celery.py  exception_handler.py  middleware.py  routing.py  urls.py
config/settings/: __init__.py  base.py  development.py  production.py  test.py
docs/api/: README.md
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/e2e/: global-setup.ts
frontend/e2e/fixtures/: auth.fixture.ts
frontend/e2e/tests/: theme-i18n-calendar.spec.ts
frontend/e2e/utils/: helpers.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.test.ts  client.ts  useActivityFeed.ts  useAssignments.ts  useCalendarEvents.ts  useChecklistInstances.ts  useChecklists.test.tsx  useChecklists.ts  useCommunityTemplates.ts  (+11 more)
nginx/: nginx.conf
requirements/: base.txt  development.txt
scripts/: entrypoint.sh  init_db.py  manage.py  wait-for-it.sh
src/checkix/: __init__.py  config.py  database.py  dependencies.py  e2e_seed_admin.py  exceptions.py  main.py
templates/: base.html
tests/: __init__.py  conftest.py  test_alembic_bootstrap.py  test_api_contract_dtos.py  test_auth_security.py  test_checklist_lifecycle.py  test_e2e_seed_admin.py  test_instances_and_run_links.py  test_smoke.py  test_todos.py
tests/factories/: __init__.py  assignment_factory.py  calendar_factory.py  checklist_factory.py  community_factory.py  instance_factory.py  notification_factory.py  run_link_factory.py  stats_factory.py  todo_factory.py  user_factory.py  webhook_factory.py
tests/integration/: test_assignment_api.py  test_audit_api.py  test_auth_api.py  test_calendar_api.py  test_checklist_api.py  test_community_api.py  test_folders_api.py  test_instances_api.py  test_ldap_api.py  test_notification_api.py  test_permissions.py  test_run_links_api.py  test_stats_api.py  test_tags_api.py  test_todo_api.py  test_users_api.py  test_webhook_api.py
tests/unit/: test_assignment_services.py  test_checklist_services.py  test_core_models.py  test_notification_services.py  test_stats_services.py  test_webhook_services.py
(+214 files in other folders)
